--- a/index.html
+++ b/index.html
@@ -63,7 +63,225 @@
                     заводов силовых машин</p>
             </div>
         </section>
+
+        <section class="info container">
+            <h2 class="title mt-65">«Пионер» сегодня — это</h2>
+            <p class="info__text mt-10">научно-производственное предприятие, занимающееся разработкой и производством
+                силовых машин.</p>
+
+            <div class="info__stats mt-85">
+                <div class="info__stat">
+                    <span class="info__stat-number">4</span>
+                    <p class="info__stat-text">страны-<br>представителя</p>
+                </div>
+
+                <div class="info__stat">
+                    <span class="info__stat-number">28</span>
+                    <p class="info__stat-text">лет <br>
+                        опыта</p>
+                </div>
+
+                <div class="info__stat">
+                    <span class="info__stat-number">35%</span>
+                    <p class="info__stat-text">доля компании <br> на рынке СНГ</p>
+                </div>
+            </div>
+
+            <div class="info__text mt-85">В номенклатуре выпускаемой НПП «ПИОНЕР» продукции найдется все, что необходимо
+                для
+                успешного решения задачи автоматизации технологических процессов на любом предприятии. Все средства
+                измерения производства «ПИОНЕР» внесены в Государственный реестр СИ и имеют необходимые разрешительные
+                документы.
+                <br><br>
+                Ежегодно НПП «ПИОНЕР» реализует несколько проектов по модернизации серийных и разработке новых приборов,
+                призванные в наибольшей степени удовлетворять возрастающие требования наших заказчиков.
+            </div>
+        </section>
+
+        <section class="products container mt-100">
+            <h2 class="title">Наши продукты</h2>
+            <div class="flex-products mt-20">
+                <div class="product-card">
+                    <img class="product-card__img" src="./img/product-img1.svg" alt="Атомная энергетика">
+
+                    <h3 class="product-card__title">Атомная энергетика</h3>
+                    <button class="btn">Подробнее</button>
+                </div>
+                <div class="product-card">
+                    <img class="product-card__img" src="./img/product-img2.png" alt="Тепловая энергетика">
+
+                    <h3 class="product-card__title">Тепловая энергетика</h3>
+                    <button class="btn">Подробнее</button>
+                </div>
+                <div class="product-card">
+                    <img class="product-card__img" src="./img/product-img3.svg" alt="Гидроэнергетика">
+
+                    <h3 class="product-card__title">Гидроэнергетика</h3>
+                    <button class="btn">Подробнее</button>
+                </div>
+                <div class="product-card">
+                    <img class="product-card__img" src="./img/product-img4.png" alt="Промышленность 
+                    и транспорт">
+
+                    <h3 class="product-card__title">Промышленность и <br> транспорт</h3>
+                    <button class="btn">Подробнее</button>
+                </div>
+                <div class="product-card">
+                    <img class="product-card__img" src="./img/product-img5.svg" alt="Газовые турбины">
+
+                    <h3 class="product-card__title">Газовые турбины</h3>
+                    <button class="btn">Подробнее</button>
+                </div>
+                <div class="product-card">
+                    <img class="product-card__img" src="./img/product-img6.png" alt="Сервис">
+
+                    <h3 class="product-card__title">Сервис</h3>
+                    <button class="btn">Подробнее</button>
+                </div>
+            </div>
+        </section>
+
+        <section class="geography container mt-100">
+            <div class="geography__cities">
+                <h2 class="title">География поставок</h2>
+                <div class="geography__city-cards mt-20">
+                    <span class="geography__input input">
+                        <a href="#" class="link"><i class="fa-solid fa-magnifying-glass"></i></a>
+                        <input type="text" placeholder="Поиск по городам">
+                    </span>
+
+                    <div class="city-card">
+                        <p class="city-card__text">
+                            <span>г. Санкт-петербург,</span> <br>
+                            Московский пр-т, д. 56
+                        </p>
+                        <a href="#"><img src="./img/city-icon.svg"></a>
+                    </div>
+
+                    <div class="city-card">
+                        <p class="city-card__text">
+                            <span>г. Москва,</span> Большой <br>
+                            Тишинский пер., д. 2
+                        </p>
+                        <a href="#"><img src="./img/city-icon.svg"></a>
+                    </div>
+
+                    <div class="city-card">
+                        <p class="city-card__text">
+                            <span>г. Казань,</span> <br>
+                            Тэцевская ул., д. 11
+                        </p>
+                        <a href="#"><img src="./img/city-icon.svg"></a>
+                    </div>
+
+                    <div class="city-card">
+                        <p class="city-card__text">
+                            <span>г. Владивосток,</span> <br>
+                            ул. Добровольского, д. 20
+                        </p>
+                        <a href="#"><img src="./img/city-icon.svg"></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="geography__map">
+                <img src="./img/map.svg" alt="География поставок">
+            </div>
+        </section>
+
+        <section class="gallery container mt-100">
+            <h2 class="title">Галерея <i class="fa-solid fa-arrow-right"></i></h2>
+
+            <div class="grid-photos mt-30">
+                <img src="./img/gallery-photo1.png" id="photo1">
+                <img src="./img/gallery-photo2.png" id="photo2">
+                <img src="./img/gallery-photo3.png" id="photo3">
+                <img src="./img/gallery-photo4.png" id="photo4">
+                <img src="./img/gallery-photo5.png" id="photo5">
+                <img src="./img/gallery-photo6.png" id="photo6">
+                <img src="./img/gallery-photo7.png" id="photo7">
+            </div>
+        </section>
+
+        <section class="news container mt-100 mb-120">
+            <h2 class="title">Новости завода</h2>
+            <div class="flex-news mt-20">
+                <div class="news-card">
+                    <img src="./img/news-photo1.svg">
+                    <p class="news__text mt-10">НПП «ПИОНЕР» подтвердило свои компетенции в области консультирования и
+                        изготовления оборудования для объектов использования атомной энергии</p>
+                </div>
+
+                <div class="news-card">
+                    <img src="./img/news-photo2.svg">
+                    <p class="news__text mt-10">Перенос сроков проведения запланированных работ в 2020 году</p>
+                </div>
+
+                <div class="news-card">
+                    <img src="./img/news-photo3.svg">
+                    <p class="news__text mt-10">Поздравляем коллектив регионального представительства «ПИОНЕР» с
+                        праздником!</p>
+                </div>
+
+                <div class="news-card">
+                    <img src="./img/news-photo4.svg">
+                    <p class="news__text mt-10">Срок действия договоренностей продлен
+                        на год</p>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <footer class="footer container pt-40">
+        <div class="footer__contacts">
+            <img src="./img/Logo_Pioner_white.svg" alt="Пионер" class="footer__logo">
+            <p class="contacts__text mt-20">© 1994 «Пионер» <br>
+                +7(800)-120-52-50 <br>
+                pionerrr@sila.ru
+            </p>
+        </div>
+
+        <div class="footer__nav">
+            <p class="nav__title">Разделы</p>
+            <nav class="mt-10">
+                <ul>
+                    <li>
+                        <a href="#" class="link">О предприятии</a>
+                    </li>
+                    <li>
+                        <a href="#" class="link">Новости</a>
+                    </li>
+                    <li>
+                        <a href="#" class="link">Продукция</a>
+                    </li>
+                </ul>
+
+                <ul>
+                    <li>
+                        <a href="#" class="link">География поставок</a>
+                    </li>
+                    <li>
+                        <a href="#" class="link">Услуги</a>
+                    </li>
+                    <li>
+                        <a href="#" class="link">Поддержка</a>
+                    </li>
+                </ul>
+
+                <ul>
+                    <li>
+                        <a href="#" class="link">Каталоги</a>
+                    </li>
+                    <li>
+                        <a href="#" class="link">Файлы</a>
+                    </li>
+                    <li>
+                        <a href="#" class="link">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
 
 
     <script src="https://kit.fontawesome.com/2a7549d8ca.js" crossorigin="anonymous"></script>
